--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+/* Google Fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Moul&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 /* Asterisk Wildcard selector to override default styles added by browser */
 * {
     padding: 0;
@@ -11,6 +14,7 @@ body {
     display: flex;
     flex-direction: column;
     /* Generic project styles */
+    font-family: 'Raleway', sans-serif;
     color: black;
     
 }
