Add logo to header and apply 'Moul' font

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,10 @@ header {
     background-color: whitesmoke;
 }
 
+h1 {
+    font-family: 'Moul', sans-serif;
+}
+
 /* Main */
 main {
     background-color: lightblue;
