--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,11 @@ body {
 /* Header */
 header {
     background-color: whitesmoke;
+    padding: 0 1rem;
+    position: fixed;
+    z-index: 100;
+    width: 100%;
+    box-shadow: 0 1px 1px black;
 }
 
 h1 {
