--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,8 +29,14 @@ header {
     box-shadow: 0 1px 1px black;
 }
 
+header a {
+    text-decoration: none;
+    color: inherit;
+}
+
 h1 {
     font-family: 'Moul', sans-serif;
+    color: black;
 }
 
 /* Main */
