--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,17 @@ h1 {
     border-bottom: 1px solid gray;
 }
 
+/* Navbar styles with dropdown toggle */
+nav {
+    position: absolute;
+    background-color: whitesmoke;
+    width: 100%;
+    left: 0;
+    padding: 0 1rem;
+    box-shadow: 0 1px 1px black;
+    display: none;
+}
+
 /* Main */
 main {
     background-color: lightblue;
