--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,7 @@ main {
     background-color: lightblue;
     /* Make main element push footer down and use surplus space */
     flex: 1 0 auto;
+    margin-top: 58px;
 }
 
 /* Footer */
