--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,6 +91,13 @@ main {
     margin-top: 58px;
 }
 
+#hero-image {
+    height: 500px;
+    width: 100%;
+    background: url("../images/hero-image.jpg") no-repeat center center/cover;
+    position: relative;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
