--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,8 +38,16 @@ header a {
 }
 
 h1 {
-    font-family: 'Moul', sans-serif;
-    color: black;
+    font-size: 180%;
+    line-height: 75px;
+    margin: 0 0.5rem;
+    text-transform: uppercase;
+    color: brown;
+}
+
+h2, h3 {
+    color: brown;
+    text-decoration-line: underline;
 }
 
 #menu {
@@ -102,12 +110,18 @@ main {
     text-align: center;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
+}
+
+#reasons {
+    margin: 5px 5px;
+    font-weight: 600;
 }
 
 .text-boxes {
-    border: 0.5px solid greenyellow;
     padding: 10px;
+    background-color: rgb(230, 230, 230);
+    box-shadow: 1.5px 1.5px;
 }
 
 #information {
@@ -116,6 +130,7 @@ main {
     justify-content: center;
     flex-wrap: wrap;
     gap: 10px;
+    margin: 0px 10px;
 }
 
 /* Footer */
