--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ main {
 #hero-image {
     height: 500px;
     width: 100%;
-    background: url("../images/hero-image.jpg") no-repeat center center/cover;
+    background: url("../images/hero-image.webp") no-repeat center center/cover;
     position: relative;
 }
 
