--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ main {
     margin-top: 75px;
 }
 
-#hero-image {
+.hero-image {
     height: 500px;
     width: 100%;
     background: url("../images/hero-image.webp") no-repeat center center/cover;
@@ -168,13 +168,16 @@ main {
 }
 
 #signup-form {
+    height: 200px;
+    width: 400px;
     text-align: center;
+    align-self: flex-end;
 }
 
 /* Footer */
 #social-networks {
     text-align: center;
-    padding: 10px 0;
+    padding: 2px 0;
     display: flex;
     justify-content: space-evenly;
     list-style-type: none;
