--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,9 +162,9 @@ main {
 /* Sign-up page */
 #sign-up {
     display: flex;
-    height: 80vh;
     justify-content: center;
     align-items: center;
+    margin-top: 3px;
 }
 
 #signup-form {
@@ -172,6 +172,14 @@ main {
     width: 400px;
     text-align: center;
     align-self: flex-end;
+}
+
+/* Button styles */
+#submit {
+    font-size: 100%;
+    width: 80px;
+    height: 30px;
+    box-shadow: 1px 1px;
 }
 
 /* Footer */
@@ -236,6 +244,15 @@ main {
     #pictures {
         column-count: 2;
         padding: 5px;
+    }
+
+    /* Sign-up */
+    #signup-form {
+        height: 200px;
+        width: 600px;
+        text-align: center;
+        align-self: flex-end;
+        margin-top: 15px;
     }
 }
 
