--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,11 @@ main {
     position: relative;
 }
 
+/* Calendar styles */
+table, th, td {
+    border: 1px solid rgb(230, 230, 230);
+}
+
 /* Join us styles */
 #join-us {
     text-align: center;
