--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,11 @@ main {
 }
 
 /* Calendar styles */
+#calendar {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
 table, th, td {
     border: 1px solid rgb(230, 230, 230);
 }
