--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,19 +173,25 @@ main {
 #sign-up {
     display: flex;
     justify-content: center;
-    align-items: center;
     margin-top: 3px;
 }
 
 #signup-form {
     height: 200px;
     width: 400px;
-    text-align: center;
-    align-self: flex-end;
+}
+
+.input-fields {
+    height: 25px;
+    width: 60%;
+    margin: 5px;
+    border: 1px solid black;
+    border-radius: 3px;
 }
 
 /* Button styles */
 #submit {
+    align-self: center;
     font-size: 100%;
     width: 80px;
     height: 30px;
