--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,21 @@ main {
     position: relative;
 }
 
+#click-me {
+    display: flex;
+    justify-content:  center;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+#click-me-button {
+    padding: 20px;
+    text-decoration: none;
+    font-size: 200%;
+    color: brown;
+    background-color: rgb(230, 230, 230);
+    box-shadow: 5px 5px black;
+}
 
 /* Information styles */
 .text-boxes {
