--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,6 +173,18 @@ main {
     background-color: rgb(230, 230, 230);
 }
 
+#location {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#maps {
+    margin-top: 5px;
+    width: 80%;
+    height: 300px;
+}
+
 /* Pictures page */
 #pictures {
     padding-top: 5px;
@@ -266,11 +278,15 @@ main {
         margin-top: 75px;
     }
 
-    /* Join us */
+    /* Information idex */
     #reasons {
         min-width: 700px;
     }
 
+    /* Maps */
+    #maps {
+        width: 60%;
+    }
     /* Pictures */
     #pictures {
         column-count: 2;
