--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
     flex-direction: column;
     /* Generic project styles */
     font-family: 'Raleway', sans-serif;
-    color: black;
+    color: #000000;
     
 }
 
@@ -25,12 +25,12 @@ body {
 
 /* Header */
 header {
-    background-color: whitesmoke;
+    background-color: #f5f5f5;
     padding: 0 1rem;
     position: fixed;
     z-index: 100;
     width: 100%;
-    box-shadow: 0 1px 1px black;
+    box-shadow: 0 1px 1px #000000;
     display: flex;
     justify-content: space-between;
     align-items: baseline;
@@ -46,11 +46,11 @@ h1 {
     line-height: 75px;
     margin: 0 0.5rem;
     text-transform: uppercase;
-    color: brown;
+    color: #a52a2a;
 }
 
 h2, h3 {
-    color: brown;
+    color: #a52a2a;
     text-decoration-line: underline;
 }
 
@@ -58,26 +58,26 @@ h2, h3 {
     list-style-type: none;
     letter-spacing: 4px;
     font-size: 110%;
-    color: gray;
+    color: #808080;
 }
 
 #menu > li {
     margin-bottom: 1em;
-    color: gray;
+    color: #808080;
 }
 
 .active {
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid #808080;
 }
 
 /* Navbar styles with dropdown toggle */
 nav {
     position: absolute;
-    background-color: whitesmoke;
+    background-color: #f5f5f5;
     width: 100%;
     left: 0;
     padding: 0 1rem;
-    box-shadow: 0 1px 1px black;
+    box-shadow: 0 1px 1px #000000;
     display: none;
     top: 100%;
 }
@@ -121,9 +121,9 @@ main {
     padding: 20px;
     text-decoration: none;
     font-size: 200%;
-    color: brown;
-    background-color: rgb(230, 230, 230);
-    box-shadow: 5px 5px black;
+    color: #a52a2a;
+    background-color: #e6e6e6;
+    box-shadow: 5px 5px #000000;
 }
 
 /* Information styles */
@@ -132,7 +132,7 @@ main {
     flex-direction: column;
     text-align: center;
     padding: 10px;
-    background-color: rgb(230, 230, 230);
+    background-color: #e6e6e6;
     box-shadow: 1.5px 1.5px;
     width: 400px;
 }
@@ -171,7 +171,7 @@ main {
     height: 150px;
     margin: 2px;
     padding: 2px;
-    background-color: rgb(230, 230, 230);
+    background-color: #e6e6e6;
 }
 
 /* Maps */
@@ -215,7 +215,7 @@ main {
     height: 25px;
     width: 60%;
     margin: 5px;
-    border: 1px solid black;
+    border: 1px solid #000000;
     border-radius: 3px;
 }
 
@@ -235,7 +235,7 @@ main {
     display: flex;
     justify-content: space-evenly;
     list-style-type: none;
-    background-color: whitesmoke;
+    background-color: #f5f5f5;
     margin-top: 10px;
 }
 
@@ -309,11 +309,11 @@ main {
 /* Media query: laptops and larger (992px and up) */
 @media screen and (min-width: 992px) {
     #menu a:hover {
-        border-bottom: 1px solid gray;
+        border-bottom: 1px solid #808080;
     }
 
     #click-me a:hover {
-        background-color: rgba(128, 128, 128, 0.5)
+        background-color: #80808080
     }
 
     /* Pictures */
