--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,22 +58,23 @@ h2, h3 {
     list-style-type: none;
     letter-spacing: 4px;
     font-size: 110%;
-    color: #808080;
+    color: #3f3f3f;
+    font-weight: 500;
 }
 
 #menu > li {
     margin-bottom: 1em;
-    color: #808080;
+    color: #3f3f3f;
 }
 
 .active {
-    border-bottom: 1px solid #808080;
+    border-bottom: 1px solid #3f3f3f;
 }
 
 /* Navbar styles with dropdown toggle */
 nav {
     position: absolute;
-    background-color: #f5f5f5;
+    background-color: #f5f5f565;
     width: 100%;
     left: 0;
     padding: 0 1rem;
