--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ h2, h3 {
 /* Navbar styles with dropdown toggle */
 nav {
     position: absolute;
-    background-color: #f5f5f565;
+    background-color: #f5f5f5;
     width: 100%;
     left: 0;
     padding: 0 1rem;
